[package]
name = "php-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.8.0"
deno_core = "0.149.0"
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.21"
anyhow = "1.0.57"
deno_runtime = "0.75.0"
deno_broadcast_channel = "0.61.0"
tokio = { version = "1.19", features = ["full"] }
deno_ops = "0.28.0"
v8 = "0.49.0"
deno_ast = { version = "0.19.0", features = ["module_specifier", "transpiling"] }

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
ext-php-rs = { path = 'deps/ext-php-rs' }
